2005-07-15  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (redirect_handler): Allow relative URIs,
	since some servers are lame. Based on a patch from Jean-Yves
	Lefort. [#270688]

	* tests/uri-parsing.c: add some more tests to make sure that
	things that should be %-escaped do get %-escaped

2005-07-06  Tor Lillqvist  <tml@novell.com>

	* libsoup/soup-date.c (soup_gmtime): Mention in the doc comment
	that gmtime() is thread-safe on Windows.
	(soup_date_generate): Use soup_gmtime() instead of gmtime_r().

2005-06-14  Dan Winship  <danw@novell.com>

	* configure.in: check for gmtime_r

	* libsoup/soup-date.c: date/time-manipulation functions

	* libsoup/soup-xmlrpc-message.c: 
	* libsoup/soup-xmlrpc-response.c: XMLRPC message classes, from
	Mariano Suarez-Alvarez, Fernando Herrera, and Jeff Bailey.
	[#300227]

	* tests/date.c: soup-date test code

	* tests/getbug.c: XMLRPC test code. (Should be switched to use
	bugzilla.gnome.org once bgo supports XMLRPC.)

	* TODO: XMLRPC is implemented now (but shares the problem with
	SOAP that the API is not very good).

2005-06-14  Dan Winship  <danw@novell.com>

	* libsoup/*.[ch]: add/fix gtk-doc comments, make functions match
	prototypes, etc

	* docs/reference/*: update, fix, etc

2005-06-13  Tor Lillqvist  <tml@novell.com>

	* configure.in: Check also for inet_ntop(). Pre-cache knowledge
	that we do have inet_pton() and inet_ntop() on Windows (because we
	implement them ourselves in soup-dns.c).
	
	* libsoup/soup-dns.c (inet_pton, inet_ntop): Fix the Win32
	implementations, they were completely bogus.
	(soup_dns_ntop): Make it compile if HAVE_INET_NTOP.

2005-06-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): Fix this to
	use just the domain name for the domain, not the whole
	DOMAIN\username. Based on a patch by Jeroen Hautekeete in #306877.

2005-05-26  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (cleanup_hosts): lock host_lock around